--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,99 @@
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@drawable/background_drawing_view_layout"
-       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintBottom_toTopOf="@id/liPaintColors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
+       />
+
+   <LinearLayout
+       android:id="@+id/liPaintColors"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal"
+       app:layout_constraintBottom_toTopOf="@id/ibBrush"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/drawingView"
+       >
+
+      <ImageButton
+          android:layout_width="25dp"
+          android:layout_height="25dp"
+          android:layout_margin="2dp"
+          android:src="@drawable/pallet_normal"
+          android:tag="@color/yellow"
+          android:background="@color/yellow"
+          />
+
+      <ImageButton
+          android:layout_width="25dp"
+          android:layout_height="25dp"
+          android:layout_margin="2dp"
+          android:src="@drawable/pallet_normal"
+          android:tag="@color/black"
+          android:background="@color/black"
+          />
+
+      <ImageButton
+          android:layout_width="25dp"
+          android:layout_height="25dp"
+          android:layout_margin="2dp"
+          android:src="@drawable/pallet_normal"
+          android:tag="@color/red"
+          android:background="@color/red"
+          />
+
+      <ImageButton
+          android:layout_width="25dp"
+          android:layout_height="25dp"
+          android:layout_margin="2dp"
+          android:src="@drawable/pallet_normal"
+          android:tag="@color/green"
+          android:background="@color/green"
+          />
+
+      <ImageButton
+          android:layout_width="25dp"
+          android:layout_height="25dp"
+          android:layout_margin="2dp"
+          android:src="@drawable/pallet_normal"
+          android:tag="@color/blue"
+          android:background="@color/blue"
+          />
+
+      <ImageButton
+          android:layout_width="25dp"
+          android:layout_height="25dp"
+          android:layout_margin="2dp"
+          android:src="@drawable/pallet_normal"
+          android:tag="@color/lollipop"
+          android:background="@color/lollipop"
+          />
+
+      <ImageButton
+          android:layout_width="25dp"
+          android:layout_height="25dp"
+          android:layout_margin="2dp"
+          android:src="@drawable/pallet_normal"
+          android:tag="@color/random"
+          android:background="@color/random"
+          />
+
+   </LinearLayout>
+
+   <ImageButton
+       android:id="@+id/ibBrush"
+       android:layout_width="50dp"
+       android:layout_height="50dp"
+       android:layout_margin="5dp"
+       android:src="@drawable/small"
+       android:scaleType="fitXY"
+       android:contentDescription="Chooser Brush Size Button"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintLeft_toLeftOf="parent"
+       app:layout_constraintRight_toRightOf="parent"
        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
