--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
           android:src="@drawable/pallet_normal"
           android:tag="@color/yellow"
           android:background="@color/yellow"
+          android:onClick="paintClicked"
           />
 
       <ImageButton
@@ -45,6 +46,7 @@
           android:src="@drawable/pallet_normal"
           android:tag="@color/black"
           android:background="@color/black"
+          android:onClick="paintClicked"
           />
 
       <ImageButton
@@ -54,6 +56,7 @@
           android:src="@drawable/pallet_normal"
           android:tag="@color/red"
           android:background="@color/red"
+          android:onClick="paintClicked"
           />
 
       <ImageButton
@@ -63,6 +66,7 @@
           android:src="@drawable/pallet_normal"
           android:tag="@color/green"
           android:background="@color/green"
+          android:onClick="paintClicked"
           />
 
       <ImageButton
@@ -72,6 +76,7 @@
           android:src="@drawable/pallet_normal"
           android:tag="@color/blue"
           android:background="@color/blue"
+          android:onClick="paintClicked"
           />
 
       <ImageButton
@@ -81,6 +86,7 @@
           android:src="@drawable/pallet_normal"
           android:tag="@color/lollipop"
           android:background="@color/lollipop"
+          android:onClick="paintClicked"
           />
 
       <ImageButton
@@ -90,6 +96,7 @@
           android:src="@drawable/pallet_normal"
           android:tag="@color/random"
           android:background="@color/random"
+          android:onClick="paintClicked"
           />
 
    </LinearLayout>
