--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,27 +6,46 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-   <eu.tutorials.kidsdrawingapp.DrawingView
-       android:id="@+id/drawingView"
+   <FrameLayout
+       android:id="@+id/flDrawingViewContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
+       android:padding="1dp"
        android:background="@drawable/background_drawing_view_layout"
        app:layout_constraintBottom_toTopOf="@id/liPaintColors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
-       />
+       >
+      
+      <ImageView
+          android:id="@+id/ivBackground"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:scaleType="centerCrop"
+          android:src="@drawable/pizza"
+          />
+      <!-- centerCrop: 중앙만 사용하고 남는곳은 자르기-->
+      
+      <eu.tutorials.kidsdrawingapp.DrawingView
+          android:id="@+id/drawingView"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:background="#80FFFFFF"
+          />
+
+   </FrameLayout>
 
    <LinearLayout
        android:id="@+id/liPaintColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
-       app:layout_constraintBottom_toTopOf="@id/ibBrush"
+       app:layout_constraintTop_toBottomOf="@id/flDrawingViewContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintTop_toBottomOf="@id/drawingView"
+       app:layout_constraintBottom_toTopOf="@id/ibBrush"
        >
 
       <ImageButton
@@ -100,6 +119,7 @@
           />
 
    </LinearLayout>
+
 
    <ImageButton
        android:id="@+id/ibBrush"
