mPaths, mUndoPaths를 이용해 사용자가 그린 그림을 취소했다가 다시 불러오는 기능들 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -142,6 +142,24 @@
           />
 
       <ImageButton
+          android:id="@+id/ibUndo"
+          android:layout_width="50dp"
+          android:layout_height="50dp"
+          android:layout_margin="5dp"
+          android:src="@drawable/undoimage"
+          android:scaleType="fitXY"
+          />
+
+      <ImageButton
+          android:id="@+id/ibGetBack"
+          android:layout_width="50dp"
+          android:layout_height="50dp"
+          android:layout_margin="5dp"
+          android:src="@drawable/stake"
+          android:scaleType="fitXY"
+          />
+
+      <ImageButton
           android:id="@+id/ibBrush"
           android:layout_width="50dp"
           android:layout_height="50dp"
