save 버튼 생성 및 기능 만드는 중...

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -146,7 +146,7 @@
           android:layout_width="50dp"
           android:layout_height="50dp"
           android:layout_margin="5dp"
-          android:src="@drawable/undoimage"
+          android:src="@drawable/undoImage"
           android:scaleType="fitXY"
           />
 
@@ -167,6 +167,13 @@
           android:src="@drawable/small"
           android:scaleType="fitXY"
           android:contentDescription="Chooser Brush Size Button"
+          />
+      <ImageButton
+          android:id="@+id/ibSave"
+          android:layout_width="50dp"
+          android:layout_height="50dp"
+          android:layout_margin="5dp"
+          android:scaleType="fitXY"
           />
 
    </LinearLayout>
